# Shiguang-Linux

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  icon.gresource.xml  io.github.populusyang.shiguang.desktop
src/: api.c  api.h  main.c
tests/: stress_test.c  test_api.c
